new version of the website

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,2 @@
-$primaryColor: #d5d3d8; //light grey
-$secondaryColor: #0b8ad4; //blue
+$primaryColor: #000000; //black
+$secondaryColor: #ffffff; //white
