--- a/css/styles.css
+++ b/css/styles.css
@@ -313,56 +313,33 @@ html {
   box-sizing: border-box; }
 
 body {
+  font-family: 'Bangers', cursive;
+  font-family: 'Orbitron', sans-serif;
   font-family: 'Permanent Marker', cursive;
-  font-family: 'Sriracha', cursive;
+  font-family: 'Stick', sans-serif;
   font-size: 16px;
   font-weight: 300;
-  background-color: #000000; }
+  background-color: #000000 !important; }
 
-/* GRID */
-.row {
-  clear: both; }
-
-.limited {
-  max-width: 1140px;
-  margin: auto; }
-
-.column {
-  float: left;
-  padding: 0 2vw;
-  margin: 0 0 .75rem 0; }
-
-.small-12 {
-  width: 100%; }
-
-.small-6 {
-  width: 50%; }
-
-/* header rules */
-header {
-  background-color: #0b8ad4; }
-
-/*header img {
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-    float: left; 
-    height: 85px;
-    padding-right: 10px; 
-}*/
+/***** HEADER RULES *****/
 .header-img {
-  background-image: url("../img/header4.jpg");
+  background-image: url("../img/header4BW.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
   position: relative;
   background-size: cover;
-  height: 300px;
-  padding-left: 5%; }
+  height: 250px; }
 
-header div {
-  text-align: center; }
+.logo {
+  height: 125px;
+  width: 175px;
+  margin: 0 5%; }
 
-header h1, header h2 {
+.sun {
+  text-shadow: 4px 4px #000000; }
+
+header h1,
+header h2 {
   margin: 0;
   color: #fff;
   font-weight: 300;
@@ -370,22 +347,10 @@ header h1, header h2 {
   text-align: right;
   position: absolute;
   bottom: 0;
-  right: 2%; }
+  right: 5%;
+  font-family: 'Orbitron', sans-serif; }
 
-header h1 {
-  padding: .5rem 0 0 0;
-  font-size: 1.95rem; }
-
-header h2 {
-  padding: .2rem 0 0 0;
-  font-size: 1.05rem; }
-
-.logo {
-  object-fit: contain;
-  position: absolute;
-  top: 30px; }
-
-/* navigation rules */
+/***** NAVIGATION *****/
 button#hamburgerBtn {
   background: none;
   border: none;
@@ -396,8 +361,8 @@ button#hamburgerBtn {
   float: right; }
 
 nav {
-  background-color: #0b8ad4;
-  font-family: 'Permanent Marker', cursive; }
+  background-color: #ffffff;
+  font-family: 'Stick', cursive; }
 
 nav ul {
   margin: 0;
@@ -425,14 +390,12 @@ nav ul.open {
 nav ul {
   display: none; }
 
-main img {
-  width: 100%;
-  height: auto; }
-
+/***** MAIN SECTION *****/
 main {
-  padding: 50px; }
-  main h1, main h3 {
-    color: #d5d3d8;
+  padding: 30px; }
+  main h1,
+  main h3 {
+    color: #000000;
     font-style: italic;
     margin: .5rem 0 .1rem 0; }
   main h1 {
@@ -441,60 +404,39 @@ main {
     font-size: 1.2rem; }
   main p {
     font-size: 2rem;
-    color: #ffffff; }
+    margin: 0 0 .3rem 0;
+    color: #ffffff;
+    font-family: 'Orbitron', sans-serif; }
 
-.labeled {
-  position: relative; }
-
-.labeled h6, .labeled p {
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.7);
-  margin: 0;
-  width: 100%;
-  padding: .3rem 1rem; }
-
-.labeled h6 {
-  top: 0;
-  font-size: 2rem;
-  font-weight: 300; }
-
-.labeled p {
-  bottom: 0;
-  font-weight: 700;
-  color: #b00; }
-
-footer {
-  background-color: #0b8ad4;
-  font-size: 1.2rem; }
-
+/***** FOOTER *****/
 footer h2 {
   font-style: italic;
   text-transform: uppercase;
-  margin: 1rem 0 .3rem 0; }
+  margin: 1rem 0 .3rem 0;
+  background-color: #ffffff;
+  color: #000000; }
+
+footer {
+  font-size: 1.2rem;
+  text-align: center;
+  color: #ffffff;
+  margin: 0 5%; }
 
 .social {
-  list-style-type: none;
   margin-right: 0;
-  padding-right: 0; }
+  padding-right: 0;
+  list-style-type: none; }
 
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both; }
+.zoom {
+  transition: transform .2s; }
+
+.zoom:hover {
+  transform: scale(1.5); }
+
+.company {
+  list-style-type: none; }
 
 @media only screen and (min-width: 768px) {
-  header h1 {
-    font-size: 2.85rem; }
-
-  header h2 {
-    font-size: 1.5rem; }
-
-  .medium-6 {
-    width: 50%; }
-
-  .medium-4 {
-    width: 33.3333%; }
-
   nav button {
     display: none; }
 
@@ -505,23 +447,38 @@ footer h2 {
     width: 25%;
     float: left; }
 
-  header h1, header h2 {
+  header h1,
+  header h2 {
     bottom: 0px;
     right: 5%; }
 
   .header-img {
-    height: 500px;
-    padding-left: 10%; } }
+    height: 400px; }
+
+  .logo {
+    height: 200px;
+    width: 250px;
+    margin: 0 5%; }
+
+  header h1 {
+    font-size: 2.85rem; }
+
+  header h2 {
+    font-size: 1.5rem; }
+
+  /***** FOOTER *****/
+  .social {
+    margin: auto; }
+
+  footer {
+    margin: 0; } }
 /* end of media query */
 @media only screen and (min-width: 1140px) {
-  .large-3 {
-    width: 25%; }
-
-  .large-4 {
-    width: 33.3333%; }
+  .logo {
+    margin-left: 10%; }
 
   nav ul {
-    margin-left: 2vw; }
+    margin-left: 10%; }
 
   nav li {
     width: auto; }
@@ -529,15 +486,19 @@ footer h2 {
   nav a {
     padding: .7rem 1rem; }
 
-  header h1, header h2 {
-    bottom: 0px;
-    right: 20%; }
+  header h1,
+  header h2 {
+    bottom: 5px;
+    right: 10%; }
 
   main {
-    margin: 0 20% 0 20%;
-    padding: 0 2% 0 2%; }
+    margin: 0 10% 0 10%;
+    padding: .7rem 1rem; }
 
-  .header-img {
-    height: 500px;
-    padding-left: 20%; } }
+  /***** FOOTER *****/
+  footer {
+    margin: 0 5%;
+    padding: 0 5% 0 5%; } }
 /* end of media query */
+
+/*# sourceMappingURL=styles.css.map */
