--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -1,22 +1,34 @@
+.logo {
+    margin-left: 10%;
+}
 
-    
-    .large-3 {width: 25%;}
-    .large-4 {width: 33.3333%;}
-  
-    nav ul {margin-left: 2vw;}
-    nav li {width:auto;}
-    nav a {padding: .7rem 1rem;}
+nav ul {
+    margin-left: 10%;
+}
 
-    
-    header h1, header h2 {
-        bottom: 0px;
-        right: 20%;
-    }
-    main {
-        margin: 0 20% 0 20%;
-        padding: 0 2% 0 2%;
-    }
-	.header-img {
-    height: 500px;
-    padding-left: 20%;
+nav li {
+    width: auto;
+}
+
+nav a {
+    padding: .7rem 1rem;
+}
+
+header h1,
+header h2 {
+    bottom: 5px;
+    right: 10%;
+}
+
+
+main {
+    margin: 0 10% 0 10%;
+    padding: .7rem 1rem;;
+}
+
+
+/***** FOOTER *****/
+footer {
+    margin: 0 5%;
+    padding: 0 5% 0 5%;
 }
