--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -1,23 +1,47 @@
+nav button {
+    display: none;
+}
+
+nav ul {
+    display: block;
+}
+
+nav li {
+    width: 25%;
+    float: left;
+}
+
+header h1,
+header h2 {
+    bottom: 0px;
+    right: 5%;
+}
 
 
-    header h1 {font-size: 2.85rem;}
-    header h2 {font-size: 1.5rem; }
+.header-img {
+    height: 400px;
+}
 
-    
-    .medium-6 {width: 50%;}
-    .medium-4 {width: 33.3333%;}
-    
-    nav button {display: none;}
-    nav ul {display: block;}
-    nav li {width: 25%; float: left;}
-    
-    
-    
-    header h1, header h2 {
-        bottom: 0px;
-        right: 5%;
-    }
-	.header-img {
-		height: 500px;
-        padding-left: 10%;
-	}
+.logo {
+    height: 200px;
+    width: 250px;
+    margin: 0 5%;
+
+}
+
+header h1 {
+    font-size: 2.85rem;
+}
+
+header h2 {
+    font-size: 1.5rem;
+}
+
+
+/***** FOOTER *****/
+.social {
+    margin: auto;
+}
+footer {
+    margin: 0;
+}
