--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -1,188 +1,171 @@
 html {
-    -webkit-text-size-adjust: 100%; 
+    -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
 }
 
-* { 
+* {
     -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box; 
-    box-sizing: border-box; 
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
-
 
 body {
+    font-family: 'Bangers', cursive;
+    font-family: 'Orbitron', sans-serif;
     font-family: 'Permanent Marker', cursive;
-    font-family: 'Sriracha', cursive;
+    font-family: 'Stick', sans-serif;
     font-size: 16px;
     font-weight: 300;
-    background-color: #000000;
+    background-color: #000000!important;
 }
 
-/* GRID */
-.row {clear: both;}
-.limited {
-    max-width: 1140px; 
-    margin: auto;
-}
 
-.column {float: left; padding: 0 2vw; margin: 0 0 .75rem 0;}
-.small-12 {width: 100%;}
-.small-6 {width: 50%;}
-
-/* header rules */
-header {
-    background-color: $secondaryColor;
-}
-/*header img {
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-    float: left; 
-    height: 85px;
-    padding-right: 10px; 
-}*/
+/***** HEADER RULES *****/
 .header-img {
-    background-image: url('../img/header4.jpg');
+    background-image: url('../img/header4BW.jpg');
     background-position: bottom;
     background-repeat: no-repeat;
     position: relative;
     background-size: cover;
-    height: 300px;
-    padding-left: 5%;
-    //padding-right: 10%;
+    height: 250px;
 }
-header div {
-    text-align: center;
+.logo {
+    height: 125px;
+    width: 175px;
+    margin: 0 5%;
 }
-header h1, header h2 {
+.sun {
+    text-shadow: 4px 4px #000000;
+}
+
+header h1,
+header h2 {
     margin: 0;
-    color: #fff; 
+    color: #fff;
     font-weight: 300;
     font-style: italic;
     text-align: right;
     position: absolute;
     bottom: 0;
-    right: 2%;
-}
-header h1 { 
-	padding: .5rem 0 0 0; 
-	font-size: 1.95rem;
-}
-header h2{
-	padding: .2rem 0 0 0; 
-	font-size:1.05rem;    
-}
-.logo {
-    object-fit: contain;
-    position: absolute;
-    top: 30px;
+    right: 5%;
+    font-family: 'Orbitron', sans-serif;
 }
 
-
-/* navigation rules */
-button#hamburgerBtn { 
+/***** NAVIGATION *****/
+button#hamburgerBtn {
     background: none;
-    border:none;
+    border: none;
     color: rgb(0, 0, 0);
     font-size: 2.4rem;
     cursor: pointer;
     padding: 0 30px 0 2vw;
-	float: right;
-}
-nav {
-    background-color: $secondaryColor;
-    font-family: 'Permanent Marker', cursive;
+    float: right;
 }
 
-nav ul{
-    margin: 0; 
+nav {
+    background-color: $secondaryColor;
+    font-family: 'Stick', cursive;
+}
+
+nav ul {
+    margin: 0;
     padding: 0;
     //float: right;
 }
-nav li {list-style-type: none;}
+
+nav li {
+    list-style-type: none;
+}
 
 nav a {
     display: block;
-    padding: .8rem 0; 
+    padding: .8rem 0;
     color: rgb(0, 0, 0);
     text-align: center;
     text-decoration: none;
 }
-nav li.active {background-color: rgba(255, 255, 255, 0.5);}
-nav a:hover {background-color: rgba(0,0,0,0.2);}
-nav ul.open {display: block;}
-nav ul {display: none;}
 
-
-main img {
-	width: 100%;
-	height: auto;
+nav li.active {
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
-main{
-    padding: 50px;    
-    h1, h3 {
+nav a:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+nav ul.open {
+    display: block;
+}
+
+nav ul {
+    display: none;
+}
+
+
+
+/***** MAIN SECTION *****/
+main {
+    padding: 30px;
+
+    h1,
+    h3 {
         color: $primaryColor;
         font-style: italic;
         margin: .5rem 0 .1rem 0;
 
     }
-    h1{font-size: 3rem;}
-    h3{font-size: 1.2rem;}
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 1.2rem;
+    }
 
     p {
-        
+
         font-size: 2rem;
-        //margin: 0 0 .3rem 0;
-        color: #ffffff;
+        margin: 0 0 .3rem 0;
+        color: $secondaryColor;
+        font-family: 'Orbitron', sans-serif;
     }
-} // end main
-
-
-
-
-.labeled {position: relative;}
-.labeled h6, .labeled p {
-    position: absolute;
-    background-color: rgba(255,255,255,.7);
-    margin: 0;
-    width: 100%;
-    padding: .3rem 1rem;   
-}
-.labeled h6 {
-    top: 0;
-    font-size: 2rem;
-    font-weight: 300;
-}
-.labeled p {
-    bottom: 0;
-    font-weight: 700;
-    color: #b00;
 }
 
 
 
-
-
-footer{
-    background-color: $secondaryColor;
-    font-size: 1.2rem;
-}
+/***** FOOTER *****/
 footer h2 {
     font-style: italic;
     text-transform: uppercase;
     margin: 1rem 0 .3rem 0;
+	background-color: #ffffff;
+    color: #000000;
+}
+footer {
+    font-size: 1.2rem;
+    //padding: 0 5% 0 5%;
+    text-align: center;
+    color: #ffffff;
+    margin: 0 5%;
 }
 .social {
-    list-style-type: none;
     margin-right: 0;
     padding-right: 0;
+    list-style-type: none;
+}
+
+.zoom {
+    transition: transform .2s;
+    //height: 175px;
+}
+
+.zoom:hover {
+    transform: scale(1.5);
+}
+
+.company {
+    list-style-type: none;
 }
 
 
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
