--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -1,171 +1,163 @@
 html {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 * {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Bangers', cursive;
-    font-family: 'Orbitron', sans-serif;
-    font-family: 'Permanent Marker', cursive;
-    font-family: 'Stick', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    background-color: #000000!important;
+  font-family: "Bangers", cursive;
+  font-family: "Orbitron", sans-serif;
+  font-family: "Permanent Marker", cursive;
+  font-family: "Stick", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  background-color: #000000 !important;
 }
-
 
 /***** HEADER RULES *****/
 .header-img {
-    background-image: url('../img/header4BW.jpg');
-    background-position: bottom;
-    background-repeat: no-repeat;
-    position: relative;
-    background-size: cover;
-    height: 250px;
+  background-image: url("../img/header4BW.jpg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  position: relative;
+  background-size: cover;
+  height: 250px;
 }
 .logo {
-    height: 125px;
-    width: 175px;
-    margin: 0 5%;
+  height: 125px;
+  width: 175px;
+  margin: 0 5%;
 }
 .sun {
-    text-shadow: 4px 4px #000000;
+  text-shadow: 4px 4px #000000;
 }
 
 header h1,
 header h2 {
-    margin: 0;
-    color: #fff;
-    font-weight: 300;
-    font-style: italic;
-    text-align: right;
-    position: absolute;
-    bottom: 0;
-    right: 5%;
-    font-family: 'Orbitron', sans-serif;
+  margin: 0;
+  color: #fff;
+  font-weight: 300;
+  font-style: italic;
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 5%;
+  font-family: "Orbitron", sans-serif;
 }
 
 /***** NAVIGATION *****/
 button#hamburgerBtn {
-    background: none;
-    border: none;
-    color: rgb(0, 0, 0);
-    font-size: 2.4rem;
-    cursor: pointer;
-    padding: 0 30px 0 2vw;
-    float: right;
+  background: none;
+  border: none;
+  color: rgb(0, 0, 0);
+  font-size: 2.4rem;
+  cursor: pointer;
+  padding: 0 30px 0 2vw;
+  float: right;
 }
 
 nav {
-    background-color: $secondaryColor;
-    font-family: 'Stick', cursive;
+  background-color: $secondaryColor;
+  font-family: "Stick", cursive;
 }
 
 nav ul {
-    margin: 0;
-    padding: 0;
-    //float: right;
+  margin: 0;
+  padding: 0;
+  //float: right;
 }
 
 nav li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 nav a {
-    display: block;
-    padding: .8rem 0;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    text-decoration: none;
+  display: block;
+  padding: 0.8rem 0;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  text-decoration: none;
 }
 
 nav li.active {
-    background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 nav a:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 nav ul.open {
-    display: block;
+  display: block;
 }
 
 nav ul {
-    display: none;
+  display: none;
 }
-
-
 
 /***** MAIN SECTION *****/
 main {
-    padding: 30px;
+  padding: 30px;
 
-    h1,
-    h3 {
-        color: $primaryColor;
-        font-style: italic;
-        margin: .5rem 0 .1rem 0;
+  h1,
+  h3 {
+    color: $primaryColor;
+    font-style: italic;
+    margin: 0.5rem 0 0.1rem 0;
+  }
 
-    }
+  h1 {
+    font-size: 3rem;
+  }
 
-    h1 {
-        font-size: 3rem;
-    }
+  h3 {
+    font-size: 1.2rem;
+  }
 
-    h3 {
-        font-size: 1.2rem;
-    }
-
-    p {
-
-        font-size: 2rem;
-        margin: 0 0 .3rem 0;
-        color: $secondaryColor;
-        font-family: 'Orbitron', sans-serif;
-    }
+  p {
+    font-size: 2rem;
+    margin: 0 0 0.3rem 0;
+    color: $secondaryColor;
+    font-family: "Permanent Marker", cursive;
+  }
 }
-
-
 
 /***** FOOTER *****/
 footer h2 {
-    font-style: italic;
-    text-transform: uppercase;
-    margin: 1rem 0 .3rem 0;
-	background-color: #ffffff;
-    color: #000000;
+  font-style: italic;
+  text-transform: uppercase;
+  margin: 1rem 0 0.3rem 0;
+  background-color: #ffffff;
+  color: #000000;
+  font-family: "Stick", cursive;
 }
 footer {
-    font-size: 1.2rem;
-    //padding: 0 5% 0 5%;
-    text-align: center;
-    color: #ffffff;
-    margin: 0 5%;
+  font-size: 1.2rem;
+  //padding: 0 5% 0 5%;
+  text-align: center;
+  color: #ffffff;
+  //   margin: 0 5%;
 }
 .social {
-    margin-right: 0;
-    padding-right: 0;
-    list-style-type: none;
+  margin-right: 0;
+  padding-right: 0;
+  list-style-type: none;
 }
 
 .zoom {
-    transition: transform .2s;
-    //height: 175px;
+  transition: transform 0.2s;
+  //height: 175px;
 }
 
 .zoom:hover {
-    transform: scale(1.5);
+  transform: scale(1.5);
 }
 
 .company {
-    list-style-type: none;
+  list-style-type: none;
 }
-
-
