--- a/scss/styles.css
+++ b/scss/styles.css
@@ -313,10 +313,10 @@ html {
   box-sizing: border-box; }
 
 body {
-  font-family: "Bangers", cursive;
-  font-family: "Orbitron", sans-serif;
-  font-family: "Permanent Marker", cursive;
-  font-family: "Stick", sans-serif;
+  font-family: 'Bangers', cursive;
+  font-family: 'Orbitron', sans-serif;
+  font-family: 'Permanent Marker', cursive;
+  font-family: 'Stick', sans-serif;
   font-size: 16px;
   font-weight: 300;
   background-color: #000000 !important; }
@@ -348,7 +348,7 @@ header h2 {
   position: absolute;
   bottom: 0;
   right: 5%;
-  font-family: "Orbitron", sans-serif; }
+  font-family: 'Orbitron', sans-serif; }
 
 /***** NAVIGATION *****/
 button#hamburgerBtn {
@@ -362,7 +362,7 @@ button#hamburgerBtn {
 
 nav {
   background-color: #ffffff;
-  font-family: "Stick", cursive; }
+  font-family: 'Stick', cursive; }
 
 nav ul {
   margin: 0;
@@ -373,7 +373,7 @@ nav li {
 
 nav a {
   display: block;
-  padding: 0.8rem 0;
+  padding: .8rem 0;
   color: black;
   text-align: center;
   text-decoration: none; }
@@ -397,30 +397,30 @@ main {
   main h3 {
     color: #000000;
     font-style: italic;
-    margin: 0.5rem 0 0.1rem 0; }
+    margin: .5rem 0 .1rem 0; }
   main h1 {
     font-size: 3rem; }
   main h3 {
     font-size: 1.2rem; }
   main p {
     font-size: 2rem;
-    margin: 0 0 0.3rem 0;
+    margin: 0 0 .3rem 0;
     color: #ffffff;
-    font-family: "Permanent Marker", cursive; }
+    font-family: 'Orbitron', sans-serif; }
 
 /***** FOOTER *****/
 footer h2 {
   font-style: italic;
   text-transform: uppercase;
-  margin: 1rem 0 0.3rem 0;
+  margin: 1rem 0 .3rem 0;
   background-color: #ffffff;
-  color: #000000;
-  font-family: "Stick", cursive; }
+  color: #000000; }
 
 footer {
   font-size: 1.2rem;
   text-align: center;
-  color: #ffffff; }
+  color: #ffffff;
+  margin: 0 5%; }
 
 .social {
   margin-right: 0;
@@ -428,7 +428,7 @@ footer {
   list-style-type: none; }
 
 .zoom {
-  transition: transform 0.2s; }
+  transition: transform .2s; }
 
 .zoom:hover {
   transform: scale(1.5); }
