contact form and start to gallery

--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -1,34 +1,32 @@
 .logo {
-    margin-left: 10%;
+  margin-left: 10%;
 }
 
 nav ul {
-    margin-left: 10%;
+  margin-left: 10%;
 }
 
 nav li {
-    width: auto;
+  width: auto;
 }
 
 nav a {
-    padding: .7rem 1rem;
+  padding: 0.7rem 1rem;
 }
 
 header h1,
 header h2 {
-    bottom: 5px;
-    right: 10%;
+  bottom: 5px;
+  right: 10%;
 }
-
 
 main {
-    margin: 0 10% 0 10%;
-    padding: .7rem 1rem;;
+  margin: 0 10% 0 10%;
+  padding: 0.7rem 1rem;
 }
-
 
 /***** FOOTER *****/
 footer {
-    margin: 0 5%;
-    padding: 0 5% 0 5%;
+  margin: 0 5%;
+  padding: 0 5% 0 5%;
 }
