--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,11 @@ template {
 
 html {
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+  -ms-text-size-adjust: 100%;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  overflow-x: hidden; }
 
 * {
   -moz-box-sizing: border-box;
@@ -319,7 +323,8 @@ body {
   font-family: "Stick", sans-serif;
   font-size: 16px;
   font-weight: 300;
-  background-color: #000000 !important; }
+  background-color: #000000 !important;
+  overflow-x: hidden; }
 
 /***** HEADER RULES *****/
 .header-img {
@@ -328,7 +333,8 @@ body {
   background-repeat: no-repeat;
   position: relative;
   background-size: cover;
-  height: 250px; }
+  height: 250px;
+  width: 100%; }
 
 .logo {
   height: 125px;
@@ -362,14 +368,16 @@ button#hamburgerBtn {
 
 nav {
   background-color: #ffffff;
-  font-family: "Stick", cursive; }
+  font-family: "Stick", cursive;
+  width: 100%; }
 
 nav ul {
   margin: 0;
   padding: 0; }
 
 nav li {
-  list-style-type: none; }
+  list-style-type: none;
+  background-color: #ffffff; }
 
 nav a {
   display: block;
@@ -394,8 +402,9 @@ nav ul {
 main {
   padding: 30px; }
   main h1,
+  main h2,
   main h3 {
-    color: #000000;
+    color: #ffffff;
     font-style: italic;
     margin: 0.5rem 0 0.1rem 0; }
   main h1 {
@@ -435,6 +444,30 @@ footer {
 
 .company {
   list-style-type: none; }
+
+fieldset {
+  border-radius: 10px; }
+
+legend {
+  color: #ffffff; }
+
+.row-odd {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  margin-bottom: 15px; }
+
+.row-even {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 15px;
+  margin-bottom: 15px; }
+
+.gallery-image {
+  width: 200px; }
+
+.gallery-desc {
+  padding: 10px; }
 
 @media only screen and (min-width: 768px) {
   nav button {
@@ -484,7 +517,7 @@ footer {
     width: auto; }
 
   nav a {
-    padding: .7rem 1rem; }
+    padding: 0.7rem 1rem; }
 
   header h1,
   header h2 {
@@ -493,7 +526,7 @@ footer {
 
   main {
     margin: 0 10% 0 10%;
-    padding: .7rem 1rem; }
+    padding: 0.7rem 1rem; }
 
   /***** FOOTER *****/
   footer {
