--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -1,6 +1,11 @@
 html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  // padding: 0px;
+  overflow-x: hidden;
 }
 
 * {
@@ -17,6 +22,7 @@ body {
   font-size: 16px;
   font-weight: 300;
   background-color: #000000 !important;
+  overflow-x: hidden;
 }
 
 /***** HEADER RULES *****/
@@ -27,6 +33,7 @@ body {
   position: relative;
   background-size: cover;
   height: 250px;
+  width: 100%;
 }
 .logo {
   height: 125px;
@@ -62,8 +69,9 @@ button#hamburgerBtn {
 }
 
 nav {
-  background-color: $secondaryColor;
+  background-color: #ffffff;
   font-family: "Stick", cursive;
+  width: 100%;
 }
 
 nav ul {
@@ -74,6 +82,7 @@ nav ul {
 
 nav li {
   list-style-type: none;
+  background-color: #ffffff;
 }
 
 nav a {
@@ -105,8 +114,9 @@ main {
   padding: 30px;
 
   h1,
+  h2,
   h3 {
-    color: $primaryColor;
+    color: $secondaryColor;
     font-style: italic;
     margin: 0.5rem 0 0.1rem 0;
   }
@@ -160,4 +170,32 @@ footer {
 
 .company {
   list-style-type: none;
+}
+
+// CONTACT FORM
+
+fieldset {
+  border-radius: 10px;
+}
+legend {
+  color: #ffffff;
+}
+
+.row-odd {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.row-even {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.gallery-image {
+  width: 200px;
+}
+.gallery-desc {
+  padding: 10px;
 }
